# mlops-bird-classification-project

./: .gitignore  LICENSE  Makefile  README.md  application.py  cloudbuild.yaml  config_cpu.yaml  config_gpu.yaml  data.dvc  predicter.dockerfile  pyproject.toml  requirements.txt  requirements_tests.txt  trainer.dockerfile
.dvc/: config
.github/: codecheck.yml
.github/workflows/: code_cov.yml  codecheck.yml  tests.yml
app/: application.py
dockerfiles/: app.dockerfile  gcp_vm.dockerfile  predicter.dockerfile  trainer.dockerfile  trainer_gcs.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model-epoch=01-val_accuracy=0.83.ckpt  model-epoch=12-val_accuracy=0.98.ckpt
notebooks/: make_train_validation_folders.ipynb
reports/: README.md  report.html  report.py
src/: __init__.py  hydra_train_model.py  predict_model.py  train_model.py
src/configs/: default_config.yaml  gcs_default_config.yaml
src/configs/experiment/: exp1.yaml  exp1gcs.yaml  exp2.yaml
src/configs/predict/: pred1.yaml  pred1gcs.yaml
src/data/: data.py  make_dataset.py  save_data_mean_std.py  split_train_val.py
src/models/: model.py
src/utils/: utils.py
src/visualizations/: visualize.py
tests/: test_data.py  test_model.py  test_trainer.py
