[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-face-shapes-project"
version = "0.0.1"
description = "This project aims to creat an application that can classify peploes face shape based on an image."
authors = [
  { name = "Jonas s Roslev Gjerris Line Selma Petersen Christian Bakos Leirv\u00e5g", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mlops-face-shapes-project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
